Fixed wrapping styles

--- a/src/app/components/views/portfolio/portfolio.component.scss
+++ b/src/app/components/views/portfolio/portfolio.component.scss
@@ -47,11 +47,14 @@
     &-footer {
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
       justify-content: center;
       padding-top: 1rem;
       border-top: 1px solid $primaryColor;
       span {
         margin-right: 1rem;
+
+        white-space: nowrap;
       }
     }
     &:hover {
